--- a/lab4.baxter/res/values/strings.xml
+++ b/lab4.baxter/res/values/strings.xml
@@ -4,15 +4,13 @@
     <string name="app_name">Tictactoe</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="welcome">Welcome to T3</string>
-    <string name="play">Play!</string>
-    <string name="player">Enter Players</string>
-    <string name="rank">Rankings</string>
-
-    <string-array name="Main"></string-array>
+    <string name="welcome">Welcome to T<sup>3</sup></string>
+    <string name="Enter">Enter Player Name</string>
 
     <string name="title_activity_play">Play</string>
     <string name="title_activity_enter_player">EnterPlayer</string>
     <string name="title_activity_rankings">Rankings</string>
+    <string name="EPN">Enter Name Here</string>
+    <string name="Rank">Rankings</string>
 
 </resources>
